# Generated by Django 4.0.4 on 2022-05-11 12:34

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('item', '0018_alter_item_has_accepted_offer'),
    ]

    operations = [
        migrations.CreateModel(
            name='Tag',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=200)),
            ],
        ),
        migrations.AddField(
            model_name='item',
            name='tags',
            field=models.ManyToManyField(blank=True, default=None, to='item.tag'),
        ),
    ]
